my-apps/home/wyze-bridge/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wyze-bridge
  namespace: wyze-bridge
  annotations:
    lbipam.cilium.io/ips: "192.168.10.46"
spec:
  selector:
    app: wyze-bridge
  ports:
    - name: rtsp
      port: 8554
      targetPort: 8554
    - name: hls
      port: 8888
      targetPort: 8888
    - name: webrtc
      port: 8889
      targetPort: 8889
    - name: webrtc-ice
      port: 8189
      protocol: UDP
      targetPort: 8189
    - name: web-ui
      port: 5000
      targetPort: 5000
  type: LoadBalancer
  loadBalancerClass: io.cilium/l2-announcer
